--- a/Memorama_Project-master/Windows/Inicio.xaml
+++ b/Memorama_Project-master/Windows/Inicio.xaml
@@ -7,7 +7,9 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:Memorama.Windows"
         mc:Ignorable="d"
-        Title="Inicio" Height="450" Width="800">
+        Title="Inicio" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen"
+    >
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/Memorama;component/Resources/Background.jpg"/>
