--- a/Memorama_Project-master/Pages/RegistroUsuarioPG.xaml
+++ b/Memorama_Project-master/Pages/RegistroUsuarioPG.xaml
@@ -1,4 +1,4 @@
-﻿<mah:MetroWindow x:Class="Memorama.Windows.RegistroWin"
+﻿<Page x:Class="Memorama.Pages.RegistroUsuarioPG"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,8 +9,6 @@
         
         mc:Ignorable="d"
         xmlns:p = "clr-namespace:Memorama.Languages"
-        WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
         Title="RegistroWin" Height="382" Width="504">
     <Grid HorizontalAlignment="Left" Width="494" Height="347" VerticalAlignment="Top">
 
@@ -22,8 +20,8 @@
         <Rectangle Fill="#FFFF0F94" HorizontalAlignment="Left" Height="351" VerticalAlignment="Top" Width="95" Margin="70,0,0,-4"/>
 
         <Rectangle HorizontalAlignment="Left" Height="264" Margin="35,73,0,0" RadiusY="15" RadiusX="15" StrokeStartLineCap="Round" StrokeEndLineCap="Round" Stroke="Black" StrokeThickness="3" StrokeLineJoin="Round" VerticalAlignment="Top" Width="415" Fill="#7F0C0C0C"/>
-        <TextBox x:Name="txtUsuario" MaxLength="16" materialDesign:HintAssist.Hint="{x:Static p:Resources.txtUsuario}" TextWrapping="Wrap" Margin="115,94,0,0" HorizontalAlignment="Left" Width="260" Height="25" VerticalAlignment="Top" BorderBrush="White" FontFamily="Showcard Gothic" Foreground="White" BorderThickness="0,0,0,2" Background="{x:Null}"/>
-        <TextBox x:Name="txtCorreo" MaxLength="25" GotFocus="txtCorreo_GotFocus"  materialDesign:HintAssist.Hint="{x:Static p:Resources.txtCorreo}" TextWrapping="Wrap" Margin="115,124,0,0" HorizontalAlignment="Left" Width="260" Height="25" VerticalAlignment="Top" BorderBrush="White" FontFamily="Showcard Gothic" Foreground="WhiteSmoke" BorderThickness="0,0,0,2" Background="{x:Null}"/>
+        <TextBox x:Name="txtUsuarioRW" MaxLength="16" materialDesign:HintAssist.Hint="{x:Static p:Resources.txtUsuario}" TextWrapping="Wrap" Margin="115,94,0,0" HorizontalAlignment="Left" Width="260" Height="25" VerticalAlignment="Top" BorderBrush="White" FontFamily="Showcard Gothic" Foreground="White" BorderThickness="0,0,0,2" Background="{x:Null}"/>
+        <TextBox x:Name="txtCorreoRW" MaxLength="25" GotFocus="txtCorreo_GotFocus"  materialDesign:HintAssist.Hint="{x:Static p:Resources.txtCorreo}" TextWrapping="Wrap" Margin="115,124,0,0" HorizontalAlignment="Left" Width="260" Height="25" VerticalAlignment="Top" BorderBrush="White" FontFamily="Showcard Gothic" Foreground="WhiteSmoke" BorderThickness="0,0,0,2" Background="{x:Null}"/>
         <TextBox x:Name="txtCorreo2" MaxLength="25" GotFocus="txtCorreo_GotFocus" LostFocus="txtCorreo_lostFocus"   materialDesign:HintAssist.Hint="{x:Static p:Resources.txtCorreo2}" HorizontalAlignment="Left" TextWrapping="Wrap" Width="260" Margin="115,154,0,0" Height="25" VerticalAlignment="Top" BorderBrush="White" FontFamily="Showcard Gothic" Foreground="White" BorderThickness="0,0,0,2" Background="{x:Null}"/>
         <PasswordBox x:Name="pswContrasenia" materialDesign:HintAssist.Hint="{x:Static p:Resources.pswContrasenia}"
                      HorizontalAlignment="Left" Width="260" Margin="115,184,0,0" Height="26" VerticalAlignment="Top" 
@@ -60,4 +58,4 @@
         <TextBlock Name="lblInfo" HorizontalAlignment="Left" Margin="116,245,0,0" TextWrapping="Wrap" Text="" Width="258" Height="38" FontFamily="Showcard Gothic" VerticalAlignment="Top"/>
         <Label Name="lblRegresar" Content="{x:Static p:Resources.lblRegresar}" Visibility="Hidden" HorizontalAlignment="Left" Margin="62,29,0,0" VerticalAlignment="Top" FontFamily="Arial" FontWeight="Bold"/>
     </Grid>
-</mah:MetroWindow>
+</Page>
