--- a/Memorama_Project-master/Pages/IniciarSesionPG.xaml
+++ b/Memorama_Project-master/Pages/IniciarSesionPG.xaml
@@ -18,10 +18,20 @@
                 <ImageBrush ImageSource="/Memorama;component/Resources/Background.jpg" Stretch="UniformToFill"/>
             </Image.OpacityMask>
         </Image>
-        <TextBox x:Name="txtUsuario" materialDesign:HintAssist.Hint="{x:Static p:Resources.txtUsuario}" HorizontalAlignment="Left" Height="28" Margin="158,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="190" Foreground="White" FontFamily="Showcard Gothic" BorderBrush="Black"/>
-        <PasswordBox x:Name="txtContrasenia" materialDesign:HintAssist.Hint="{x:Static p:Resources.pswContrasenia}" HorizontalAlignment="Left" Margin="158,230,0,0" VerticalAlignment="Top" Width="190" FontFamily="Showcard Gothic" BorderBrush="Black" Foreground="White"/>
-        <Button x:Name="btnIniciarSesion" Click="BtnIniciarSesion_Click" Content="{x:Static p:Resources.btnIniciarSesion}"  HorizontalAlignment="Left" Margin="158,268,0,0" VerticalAlignment="Top" Width="190" FontSize="10" FontFamily="Showcard Gothic" Background="#FF3A8FB7" BorderBrush="{x:Null}"/>
-        <Button  Content="{x:Static p:Resources.lblRegistrarse}" HorizontalAlignment="Left" Margin="158,305,0,0" VerticalAlignment="Top" Width="190" Click="BtnRegistrarse_Click" Background="#FF2C2C2A"/>
+        <TextBox x:Name="txtUsuario" materialDesign:HintAssist.Hint="{x:Static p:Resources.Usuario}" HorizontalAlignment="Left" Height="28" Margin="158,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="190" Foreground="White" FontFamily="Showcard Gothic" BorderBrush="Black"/>
+        <PasswordBox x:Name="txtContrasenia" materialDesign:HintAssist.Hint="{x:Static p:Resources.Contrasenia}" HorizontalAlignment="Left" Margin="158,230,0,0" VerticalAlignment="Top" Width="190" FontFamily="Showcard Gothic" BorderBrush="Black" Foreground="White" KeyDown="txtContrasenia_KeyDown"/>
+        <Button x:Name="btnIniciarSesion" Click="BtnIniciarSesion_Click" Content="{x:Static p:Resources.IniciarSesion}"  HorizontalAlignment="Left" Margin="142,263,0,0" VerticalAlignment="Top" Width="233" FontSize="10" FontFamily="Showcard Gothic" Background="#FF3A8FB7" BorderBrush="{x:Null}"/>
+        <Button  Content="{x:Static p:Resources.Registrarte}" HorizontalAlignment="Left" Margin="145,300,0,0" VerticalAlignment="Top" Width="95" Click="BtnRegistrarse_Click" Background="#FF643AAD" RenderTransformOrigin="0.5,0.5" FontSize="9" FontFamily="Showcard Gothic">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.099"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-0.165"/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+        <Button Name="btnOlvideContrasenia" Content="{x:Static p:Resources.OlvideContrasenia}" Click="btnOlvideContrasenia_Click"  HorizontalAlignment="Left" Margin="242,300,0,0" VerticalAlignment="Top" Width="133" FontSize="9" FontFamily="Showcard Gothic"/>
 
     </Grid>
 </Page>
